# cxx-header-utils

./: .gitignore  CMakeLists.txt  amalgamate.sh  ecm.yaml
include/: hu.h
include/hu/: annotations.h  arch.h  bits.h  compiler.h  endian.h  features.h  hu.h  lang.h  lib.h  mach.h  macros.h  objfmt.h  os.h  platform.h  selftest.h
test/: arch.cpp  bits.cpp  compiler.cpp  endian.cpp  lang.cpp  mach.cpp  macros.cpp  os.cpp  selftest.cpp
